[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-online-modded-linux"
version = "1.3.1"
description = "Standalone Linux CLI patcher for enabling mods in The Binding of Isaac online co-op"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Isaac Online Modded Linux maintainers" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
isaac-online-modded = "isaac_online_modded.cli:main_entry"

[tool.setuptools.packages.find]
where = ["src"]
